--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
         
 </style>
-<body class="dark:bg-slate-900">
+<body class="dark:bg-slate-900  text-sm">
       <!-- head -->
       <div class="head bg-[#131442] py-5 md:flex items-center justify-center hidden">
             <span class=" text-slate-200 font-bold">Q4 Update:</span><span class=" text-slate-200 font-bold mr-4">Ionic show.</span><span class=" text-slate-500 font-bold mr-8">December 13th 2022.</span>
